Fix layout height without stretching menu

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ body {
     gap: var(--grid-gap);
     align-content: start;
     position: relative;
+    min-height: 2400px;
 }
 
 .categories {
@@ -157,7 +158,7 @@ body {
 
 .detail {
     grid-column: 4;
-    grid-row: 1 / span 100;
+    grid-row: 1;
     align-self: start;
 }
 
